# ProtocolDev

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  debug_print.h  main.c  main_consoleuse_xample.c
ArduinoPlatform/: ArduinoPlatform.ino
ArduinoPlatform/HardwareInterfaceUnit/: HardwareInterfaceUnit.cpp  HardwareInterfaceUnit.h  SimpleTimerWP.h  uart.cpp  uart.h
ArduinoPlatform/UartRXtest/: UartRXtest.ino
MicrochipPIC_Platform/: HardwareInterfaceUnit.c  HardwareInterfaceUnit.h  mainXC8.c  portXC8.c  type_def.h
SpecLibs/: ConsoleMenuOptions.c  ConsoleMenuOptions.h  SimpleTimerWP.h
SpecLibs/HardwareInterfaceUnit/: HardwareInterfaceUnit.c  HardwareInterfaceUnit.h  MasterImmitationCfg.h  SlaveImmitationCfg.h  port.h
cmsis_os_for_testing/: cmsis_os.c  cmsis_os.h
